k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fraud-detection-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-read-timeout: "100"
spec:
  ingressClassName: nginx
  rules:
    - host: fraud-detection.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fraud-detection-service
                port:
                  number: 80
